[BUGFIX] add trans

--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -871,11 +871,6 @@
   "common.ui.editParticipant": "Edit participant",
   "common.ui.editPassword": "Edit Password",
   "common.ui.export": "Export",
-  "common.ui.exportOrder": "Export",
-  "common.ui.exportOrderDiscount": "Export Discounts",
-  "common.ui.exportOrderLog": "Export Orders",
-  "common.ui.exportOrderProduct": "Export Items",
-  "common.ui.exportPaymentLog": "Transaction Details",
   "common.ui.exportProgramProgress": "Export Learning Progress",
   "common.ui.facebookLogin": "Facebook login/register",
   "common.ui.gap": "Line Gap",
@@ -1704,6 +1699,7 @@
   "order.label.orderLogStatus": "Order Status",
   "order.label.orderLogUpdatedAt": "Order update time",
   "order.label.paidPrice": "Payment Amount",
+  "order.label.paymentLogDetails": "付款方式",
   "order.label.paymentLogPaidAt": "Payment time",
   "order.label.referrer": "Referrer",
   "order.text.modifyOrderStatusDescription": "This operation only changes the status display and controls the user's authority. For actual refund or amount change, please go to the Jinliu platform to operate.",
@@ -1892,9 +1888,6 @@
   "pageProgramProgressCollectionAdminPage.exerciseStatus": "Exam Status",
   "pages.salesAdminPage.export": "Export Data",
   "pages.salesAdminPage.import": "Import data",
-  "payment.status.invoiceFailed": "Invoice failed {errorCode}",
-  "payment.status.invoicePending": "No electronic invoice has been issued",
-  "payment.status.invoiceSuccess": "Invoice Successful",
   "permission.label.all": "All permissions",
   "permissionAdmin.label.permissionGroup": "Permission Group",
   "permissionAdmin.text.deletePermissionGroupConfirmation": "Once a permission group is deleted, it cannot be recovered, and the members who are attached to this permission group will be removed. Are you sure you want to delete it?",
@@ -2119,7 +2112,6 @@
   "program.text.deleteExerciseWarning": "將刪除所有與此測驗相關資料且不可復原，確定要刪除嗎？",
   "program.text.deletePracticeWarning": "All data related to this job will be deleted and cannot be recovered. Are you sure you want to delete it?",
   "program.text.deleteQuestionDescription": "Delete a question is irreversible. Are you sure you want to delete it?",
-  "program.text.deleteSectionWarning": "All content in this section will be deleted, this action cannot be undone",
   "program.text.discountDownNotation": "Price or discount -First installment discount = first installment payment amount \nEX : 100 - 20 = 80 , fill in this column 20",
   "program.text.empty": "No program issue",
   "program.text.enrolledPerpetualCount": "Purchased: {count}",
@@ -2151,23 +2143,18 @@
   "program.ui.articleContent": "Article content",
   "program.ui.checkProgramContent": "Check program content",
   "program.ui.chooseFile": "Choose File",
-  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": "Add option",
   "program.ui.createExerciseQuestion": "Add Question",
   "program.ui.delete": "Delete file",
   "program.ui.deleteChoice": "DeleteChoice",
   "program.ui.deleteContent": "Delete Content",
   "program.ui.deleteQuestion": "Delete Question",
-  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": "Enable",
   "program.ui.delivery": "Delivery Course",
   "program.ui.difficulty": "Difficulty",
   "program.ui.editProgram": "Edit Program",
   "program.ui.manageCaption": "Manage Captions",
-  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": "Preview",
-  "program.ui.programContent": "課程內容",
-  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "Reupload",
   "program.ui.sortContents": "Sort Contents",
   "program.ui.sortProgram": "Sort Program",
@@ -2291,16 +2278,8 @@
   "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "Please enter a reason for rejection",
   "project.ProjectRejectMarkModal.reason": "Reason",
   "project.ProjectRejectMarkModal.rejectMark": "Reject Mark",
-  "project.label.isParticipantsVisible": "Number of Purchasers",
-  "project.label.isPublished": "Whether for sale",
-  "project.label.planDescription": "Plan Description",
-  "project.label.published": "Released, the project will be available for sale as soon as it is released",
-  "project.label.unPublished": "Discontinued, this project is suspended from external sales and is hidden from the project",
-  "project.text.introductionDefaultNotice": "Defaults to display graphic content on mobile and computer versions",
-  "project.text.introductionDesktopNotice": "Preference will be given to the graphic content displayed on the computer version. If it is the same as \"Default\", it can be left blank",
   "project.text.noSalePlan": "No fundraising conditions have been set",
   "project.text.noSalePrice": "Sale price has not been set",
-  "project.ui.saveProjectPlan": "Save Project",
   "promotion.*.isRequired": "請輸入{field}",
   "promotion.event.successfullyRevoked": "Revoked successfully",
   "promotion.label.amount": "Amount",
@@ -2484,6 +2463,7 @@
   "sale.OrderExportModal.orderDiscountTotalPrice": "Total discount",
   "sale.OrderExportModal.orderExpired": "已失效",
   "sale.OrderExportModal.orderFailed": "付款失敗",
+  "sale.OrderExportModal.orderLogCategory": "訂單項目",
   "sale.OrderExportModal.orderLogCreatedDate": "Created Date",
   "sale.OrderExportModal.orderLogExecutor": "The Undertaker and Profit",
   "sale.OrderExportModal.orderLogId": "Order ID",
