--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -871,11 +871,6 @@
   "common.ui.editParticipant": "Edit participant",
   "common.ui.editPassword": "Edit Kata Sandi",
   "common.ui.export": "Ekspor",
-  "common.ui.exportOrder": "Ekspor",
-  "common.ui.exportOrderDiscount": "Ekspor Diskon",
-  "common.ui.exportOrderLog": "Ekspor Pesanan",
-  "common.ui.exportOrderProduct": "Ekspor Item",
-  "common.ui.exportPaymentLog": "Detail Transaksi",
   "common.ui.exportProgramProgress": "Ekspor Kemajuan Pembelajaran",
   "common.ui.facebookLogin": "Login/daftar Facebook",
   "common.ui.gap": "Kesenjangan Garis",
@@ -1704,6 +1699,7 @@
   "order.label.orderLogStatus": "Status Pesanan",
   "order.label.orderLogUpdatedAt": "Waktu pembaruan pesanan",
   "order.label.paidPrice": "Jumlah Pembayaran",
+  "order.label.paymentLogDetails": "付款方式",
   "order.label.paymentLogPaidAt": "Waktu pembayaran",
   "order.label.referrer": "Referrer",
   "order.text.modifyOrderStatusDescription": "Operasi ini hanya mengubah tampilan status dan mengontrol otoritas pengguna. Untuk pengembalian uang atau perubahan jumlah yang sebenarnya, silakan buka platform Jinliu untuk mengoperasikannya.",
@@ -1892,9 +1888,6 @@
   "pageProgramProgressCollectionAdminPage.exerciseStatus": "Status Ujian",
   "pages.salesAdminPage.export": "Ekspor Data",
   "pages.salesAdminPage.import": "Impor data",
-  "payment.status.invoiceFailed": "Faktur gagal {errorCode}",
-  "payment.status.invoicePending": "Tidak ada faktur elektronik yang diterbitkan",
-  "payment.status.invoiceSuccess": "Faktur Berhasil",
   "permission.label.all": "Semua izin",
   "permissionAdmin.label.permissionGroup": "Grup Izin",
   "permissionAdmin.text.deletePermissionGroupConfirmation": "Setelah grup izin dihapus, grup tersebut tidak dapat dipulihkan, dan anggota yang melekat pada grup izin ini akan dihapus. Anda yakin ingin menghapusnya?",
@@ -2119,7 +2112,6 @@
   "program.text.deleteExerciseWarning": "將刪除所有與此測驗相關資料且不可復原，確定要刪除嗎？",
   "program.text.deletePracticeWarning": "Semua data yang terkait dengan pekerjaan ini akan dihapus dan tidak dapat dipulihkan. Anda yakin ingin menghapusnya?",
   "program.text.deleteQuestionDescription": "Penghapusan pertanyaan tidak dapat dibatalkan. Anda yakin ingin menghapusnya?",
-  "program.text.deleteSectionWarning": "Semua konten di bagian ini akan dihapus, tindakan ini tidak dapat dibatalkan",
   "program.text.discountDownNotation": "Harga atau diskon -Potongan angsuran pertama = jumlah pembayaran angsuran pertama \nEX : 100 - 20 = 80 , isi kolom ini 20",
   "program.text.empty": "Tidak ada masalah program",
   "program.text.enrolledPerpetualCount": "Dibeli: {count}",
@@ -2151,23 +2143,18 @@
   "program.ui.articleContent": "Konten artikel",
   "program.ui.checkProgramContent": "Periksa konten program",
   "program.ui.chooseFile": "Pilih File",
-  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": "Tambahkan opsi",
   "program.ui.createExerciseQuestion": "Tambahkan Pertanyaan",
   "program.ui.delete": "Hapus file",
   "program.ui.deleteChoice": "DeleteChoice",
   "program.ui.deleteContent": "Hapus Konten",
   "program.ui.deleteQuestion": "Hapus Pertanyaan",
-  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": "Aktifkan",
   "program.ui.delivery": "Kursus Pengiriman",
   "program.ui.difficulty": "Kesulitan",
   "program.ui.editProgram": "Edit Program",
   "program.ui.manageCaption": "Kelola Teks",
-  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": "Pratinjau",
-  "program.ui.programContent": "課程內容",
-  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "Unggah ulang",
   "program.ui.sortContents": "Urutkan Konten",
   "program.ui.sortProgram": "Urutkan Program",
@@ -2291,16 +2278,8 @@
   "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "Please enter a reason for rejection",
   "project.ProjectRejectMarkModal.reason": "Reason",
   "project.ProjectRejectMarkModal.rejectMark": "Reject Mark",
-  "project.label.isParticipantsVisible": "Jumlah Pembeli",
-  "project.label.isPublished": "Apakah untuk dijual",
-  "project.label.planDescription": "Deskripsi Paket",
-  "project.label.published": "Dirilis, proyek akan tersedia untuk dijual segera setelah dirilis",
-  "project.label.unPublished": "Dihentikan, proyek ini ditangguhkan dari penjualan eksternal dan disembunyikan dari proyek",
-  "project.text.introductionDefaultNotice": "Default untuk menampilkan konten grafis pada versi seluler dan komputer",
-  "project.text.introductionDesktopNotice": "Preferensi akan diberikan pada konten grafis yang ditampilkan pada versi komputer. Jika sama dengan \"Default\", dapat dikosongkan",
   "project.text.noSalePlan": "Tidak ada ketentuan penggalangan dana yang ditetapkan",
   "project.text.noSalePrice": "Sale price has not been set",
-  "project.ui.saveProjectPlan": "Simpan Proyek",
   "promotion.*.isRequired": "請輸入{field}",
   "promotion.event.successfullyRevoked": "Berhasil dicabut",
   "promotion.label.amount": "Jumlah",
@@ -2484,6 +2463,7 @@
   "sale.OrderExportModal.orderDiscountTotalPrice": "折扣總額",
   "sale.OrderExportModal.orderExpired": "已失效",
   "sale.OrderExportModal.orderFailed": "付款失敗",
+  "sale.OrderExportModal.orderLogCategory": "訂單項目",
   "sale.OrderExportModal.orderLogCreatedDate": "建立日期",
   "sale.OrderExportModal.orderLogExecutor": "承辦人與分潤",
   "sale.OrderExportModal.orderLogId": "訂單編號",
