--- a/src/translations/locales/vi.json
+++ b/src/translations/locales/vi.json
@@ -521,6 +521,7 @@
   "common.label.discountDownPrice": "Giảm giá xuống",
   "common.label.draft": "Bản nháp",
   "common.label.email": "Email",
+  "common.label.emailForEnglish": "Email",
   "common.label.endedAt": "Thời gian kết thúc",
   "common.label.example": " Ví dụ ",
   "common.label.exportFields": " Trường Xuất ",
@@ -554,6 +555,7 @@
   "common.label.keywords": "keywords",
   "common.label.languages": "Ngôn ngữ",
   "common.label.lastLogin": "Lần Đăng nhập Cuối cùng",
+  "common.label.leadLevel": "分級",
   "common.label.learningDuration": " Giờ học ",
   "common.label.learningProgress": " Tiến trình học tập ",
   "common.label.listPrice": " Định giá ",
@@ -698,6 +700,7 @@
   "common.menu.learningOverviewAdmin": " Tổng quan về Học tập ",
   "common.menu.mediaLibrary": " Thư viện phương tiện ",
   "common.menu.memberCategory": " Danh mục thành viên ",
+  "common.menu.memberContracts": "合約資料管理",
   "common.menu.memberProperties": " Trường tùy chỉnh ",
   "common.menu.memberSettings": " Cài đặt Cá nhân ",
   "common.menu.members": "Thành viên",
@@ -868,11 +871,6 @@
   "common.ui.editParticipant": "Edit participant",
   "common.ui.editPassword": "Chỉnh sửa Mật khẩu",
   "common.ui.export": " Xuất ",
-  "common.ui.exportOrder": "Xuất",
-  "common.ui.exportOrderDiscount": "Giảm giá khi xuất khẩu",
-  "common.ui.exportOrderLog": "Xuất đơn hàng",
-  "common.ui.exportOrderProduct": "Xuất các mặt hàng",
-  "common.ui.exportPaymentLog": " Chi tiết Giao dịch ",
   "common.ui.exportProgramProgress": " Tiến trình học xuất khẩu ",
   "common.ui.facebookLogin": "Đăng nhập / đăng ký Facebook",
   "common.ui.gap": "Khoảng cách dòng ",
@@ -1507,6 +1505,48 @@
   "member.ui.memberReject": "Thành viên bị Từ chối ",
   "member.ui.switchCalendar": " Chuyển Chế độ Lịch ",
   "member.ui.switchTable": " Chuyển Chế độ Danh sách ",
+  "memberContract.label.agreed": "已簽約",
+  "memberContract.label.agreedAt": "簽署日期",
+  "memberContract.label.appointment": "諮詢",
+  "memberContract.label.appointmentCreator": "指定業師",
+  "memberContract.label.approvedApprovalAt": "核准時間",
+  "memberContract.label.approvedAt": "審核通過日期",
+  "memberContract.label.coins": "代幣",
+  "memberContract.label.contractCreator": "合約建立者",
+  "memberContract.label.executors": "承辦人",
+  "memberContract.label.installmentPlan": "期數",
+  "memberContract.label.loanCancelAt": "取消日期",
+  "memberContract.label.memberContract": "合約資料",
+  "memberContract.label.memberContractId": "合約編號",
+  "memberContract.label.note": "備註",
+  "memberContract.label.payment": "付款",
+  "memberContract.label.paymentMethod": "付款方式",
+  "memberContract.label.paymentNumber": "金流編號",
+  "memberContract.label.price": "訂單金額",
+  "memberContract.label.product": "產品",
+  "memberContract.label.proofOfEnrollment": "學生證明",
+  "memberContract.label.purchasedItemId": "購買項目",
+  "memberContract.label.rebateGift": "滿額學習工具",
+  "memberContract.label.recognizePerformance": "績效金額",
+  "memberContract.label.referralMember": "推薦人",
+  "memberContract.label.refundApply": "提出退費",
+  "memberContract.label.refundApplyAt": "提出退費日期",
+  "memberContract.label.remarks": "備註",
+  "memberContract.label.revenueShare": "業務分潤",
+  "memberContract.label.revoked": "已解約",
+  "memberContract.label.revokedAt": "解約日期",
+  "memberContract.label.servicePeriod": "服務期間",
+  "memberContract.label.serviceStartedAt": "服務開始",
+  "memberContract.label.status": "狀態",
+  "memberContract.label.studentName": "學員姓名",
+  "memberContract.reupload": "重新上傳",
+  "memberContract.status.all": "所有狀態",
+  "memberContract.status.applyRefund": "提出退費",
+  "memberContract.status.approvedApproval": "審核通過",
+  "memberContract.status.contractTermination": "解約",
+  "memberContract.status.pendingApproval": "審核中",
+  "memberContract.ui.downloadProofOfEnrollment": "下載證明",
+  "memberContract.ui.join": "加入",
   "memberMessages.label.createMember": " Thêm thành viên ",
   "memberMessages.label.presentCall": " Cuộc gọi này ",
   "memberMessages.label.roleSettings": " Thêm danh tính ",
@@ -1659,6 +1699,7 @@
   "order.label.orderLogStatus": " Trạng thái Đơn hàng ",
   "order.label.orderLogUpdatedAt": " Thời gian cập nhật đơn đặt hàng ",
   "order.label.paidPrice": " Số tiền thanh toán ",
+  "order.label.paymentLogDetails": "付款方式",
   "order.label.paymentLogPaidAt": " Thời gian thanh toán ",
   "order.label.referrer": "Liên kết giới thiệu ",
   "order.text.modifyOrderStatusDescription": " Thao tác này chỉ thay đổi hiển thị trạng thái và kiểm soát quyền hạn của người dùng. Để hoàn lại tiền hoặc thay đổi số tiền thực tế, vui lòng chuyển đến nền tảng Jinliu để hoạt động. ",
@@ -1835,6 +1876,7 @@
   "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
   "page.salesLeadDeliveryPage.field": "領域",
   "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
+  "page.salesLeadDeliveryPage.leadLevel": "名單分級",
   "page.salesLeadDeliveryPage.marketingActivity": "行銷活動",
   "page.salesLeadDeliveryPage.nextStep": "下一步",
   "page.salesLeadDeliveryPage.originalManager": "原承辦人",
@@ -1846,9 +1888,6 @@
   "pageProgramProgressCollectionAdminPage.exerciseStatus": " Trạng thái kỳ thi ",
   "pages.salesAdminPage.export": " Xuất dữ liệu ",
   "pages.salesAdminPage.import": " Nhập dữ liệu ",
-  "payment.status.invoiceFailed": "Không mở được {errorCode}",
-  "payment.status.invoicePending": "Hóa đơn điện tử",
-  "payment.status.invoiceSuccess": "Thành công",
   "permission.label.all": "Quyền sở hữu",
   "permissionAdmin.label.permissionGroup": "Nhóm quyền",
   "permissionAdmin.text.deletePermissionGroupConfirmation": "Khi các quyền bị xóa, chúng không thể được khôi phục và các thành viên có quyền với các quyền này sẽ được xóa để xác định để xóa nó?",
@@ -2009,6 +2048,8 @@
   "program.label.allowMultipleAnswers": " Cho phép nhiều câu trả lời đúng ",
   "program.label.answerDescription": " Câu trả lời Mô tả ",
   "program.label.availableForPastContent": " Có sẵn nội dung trước đây ",
+  "program.label.availableToGoBack": "可返回前題",
+  "program.label.availableToRetry": "可重新測驗",
   "program.label.choice": " Tùy chọn ",
   "program.label.chooseCaptionLanguage": " Chọn ngôn ngữ phụ đề ",
   "program.label.contentPlan": "Kế hoạch Nội dung",
@@ -2021,8 +2062,10 @@
   "program.label.displayPrivate": " Kết quả Riêng tư ",
   "program.label.duration": "Thời lượng (phút)",
   "program.label.estimatedTime": " Thời gian ước tính (phút) ",
+  "program.label.exercise": "課後測驗",
   "program.label.exerciseCreatedAt": "Ngày kiểm tra",
   "program.label.exerciseStatistics": "Điều kiện trả lời",
+  "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": " IndividualExercise ",
   "program.label.isCorrectAnswer": " Đây là câu trả lời chính xác ",
   "program.label.markIssueAs": "Đánh dấu là {status}",
@@ -2066,9 +2109,9 @@
   "program.text.coverRequiredTips": " Nếu bài tập chủ yếu dựa trên các tệp, thì không nên kiểm tra ",
   "program.text.deleteChoiceDescription": "Nếu bạn xóa một tùy chọn, nó sẽ không thể khôi phục được. Bạn có chắc chắn muốn xóa nó không? ",
   "program.text.deleteContentWarning": " Bạn có chắc chắn muốn xóa nội dung này không? Không thể hoàn tác hành động này ",
+  "program.text.deleteExerciseWarning": "將刪除所有與此測驗相關資料且不可復原，確定要刪除嗎？",
   "program.text.deletePracticeWarning": " Tất cả dữ liệu liên quan đến công việc này sẽ bị xóa và không thể khôi phục được. Bạn có chắc chắn muốn xóa nó không? ",
   "program.text.deleteQuestionDescription": " Không thể hoàn tác việc xóa câu hỏi. Bạn có chắc chắn muốn xóa câu hỏi đó không? ",
-  "program.text.deleteSectionWarning": " Tất cả nội dung trong phần này sẽ bị xóa, không thể hoàn tác hành động này ",
   "program.text.discountDownNotation": " Giá hoặc chiết khấu -Chiết khấu trả góp lần đầu = số tiền trả góp đầu tiên \nEX : 100 - 20 = 80 , điền vào cột này 20 ",
   "program.text.empty": "Không có vấn đề về chương trình",
   "program.text.enrolledPerpetualCount": "Đã mua: {count}",
@@ -2100,23 +2143,18 @@
   "program.ui.articleContent": "Nội dung bài viết",
   "program.ui.checkProgramContent": "Kiểm tra nội dung chương trình",
   "program.ui.chooseFile": " Chọn tệp ",
-  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": " Thêm tùy chọn ",
   "program.ui.createExerciseQuestion": " Thêm câu hỏi ",
   "program.ui.delete": " Xóa tệp ",
   "program.ui.deleteChoice": "DeleteChoice ",
   "program.ui.deleteContent": "Xóa nội dung",
   "program.ui.deleteQuestion": " Xóa câu hỏi ",
-  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": " Bật ",
   "program.ui.delivery": " Khóa học Giao hàng ",
   "program.ui.difficulty": " Khó khăn ",
   "program.ui.editProgram": " Chỉnh sửa chương trình ",
   "program.ui.manageCaption": " Quản lý Phụ đề ",
-  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": " Xem trước ",
-  "program.ui.programContent": "課程內容",
-  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "Tải lại ",
   "program.ui.sortContents": " Sắp xếp nội dung ",
   "program.ui.sortProgram": "Sắp xếp chương trình",
@@ -2240,16 +2278,8 @@
   "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "Please enter a reason for rejection",
   "project.ProjectRejectMarkModal.reason": "Reason",
   "project.ProjectRejectMarkModal.rejectMark": "Reject Mark",
-  "project.label.isParticipantsVisible": "Số lượng người mua",
-  "project.label.isPublished": " Cho dù để bán ",
-  "project.label.planDescription": " Mô tả kế hoạch ",
-  "project.label.published": "Đã phát hành, dự án sẽ có sẵn để bán ngay sau khi nó được phát hành ",
-  "project.label.unPublished": " Đã ngừng hoạt động, dự án này bị tạm ngừng bán ra bên ngoài và bị ẩn khỏi dự án ",
-  "project.text.introductionDefaultNotice": " Mặc định hiển thị nội dung đồ họa trên phiên bản dành cho thiết bị di động và máy tính ",
-  "project.text.introductionDesktopNotice": " Tùy chọn sẽ được cấp cho nội dung đồ họa hiển thị trên phiên bản máy tính. Nếu nó giống với\" Mặc định \", nó có thể được để trống ",
   "project.text.noSalePlan": " Không có điều kiện gây quỹ nào được đặt ",
   "project.text.noSalePrice": "Sale price has not been set",
-  "project.ui.saveProjectPlan": " Lưu dự án ",
   "promotion.*.isRequired": "請輸入{field}",
   "promotion.event.successfullyRevoked": "Phục hồi thành công",
   "promotion.label.amount": " Số lượng ",
@@ -2433,6 +2463,7 @@
   "sale.OrderExportModal.orderDiscountTotalPrice": " Tổng chiết khấu ",
   "sale.OrderExportModal.orderExpired": "已失效",
   "sale.OrderExportModal.orderFailed": "付款失敗",
+  "sale.OrderExportModal.orderLogCategory": "訂單項目",
   "sale.OrderExportModal.orderLogCreatedDate": "Ngày thành lập",
   "sale.OrderExportModal.orderLogExecutor": "Người bán chui và lợi nhuận ",
   "sale.OrderExportModal.orderLogId": " ID đặt hàng ",
@@ -2494,6 +2525,8 @@
   "sale.SaleCollectionAdminCard.removeEquity": " Xóa vốn chủ sở hữu ",
   "sale.SaleCollectionAdminCard.removeEquityWarning": " Thao tác này sẽ xóa quyền sử dụng của {productName} . Bạn có chắc chắn muốn xóa không? ",
   "sale.SaleCollectionAdminCard.updateEquitySuccessfully": "Quyền và lợi ích thành công",
+  "sales.label.assignedAt": "派發日期",
+  "sales.label.assignedLead": "近期派發",
   "sales.label.autoStartCalls": "Tự động quay số ",
   "sales.label.chaileaseApply": " Đăng ký tài trợ ",
   "sales.label.chaileaseLookup": "Đăng ký Tra cứu ",
@@ -2501,12 +2534,13 @@
   "sales.label.contactedLead": "ContactedLead ",
   "sales.label.createdAt": "Ngày thành lập",
   "sales.label.deals": "Đã giao dịch ",
+  "sales.label.dedicatedLead": "專屬名單",
+  "sales.label.existedLead": "既有名單",
   "sales.label.idledLead": " Danh sách không liên hệ ",
   "sales.label.invitedLead": "InvitedLead ",
   "sales.label.keepInTouch": " Đang phát triển ",
   "sales.label.lastContactAt": " Lần liên hệ cuối cùng ",
   "sales.label.lastTask": "Việc làm gần đây ",
-  "sales.label.paidLead": " Sinh viên hiện có ",
   "sales.label.paidPrice": " Số tiền đã trả ",
   "sales.label.potentials": " Được phát triển ",
   "sales.label.presentedLead": "ShowedLead ",
@@ -2521,11 +2555,13 @@
   "sales.label.salesPerformance": " Tóm tắt Hiệu suất ",
   "sales.label.salesStatus": " Trạng thái Trận chiến Trực tiếp ",
   "sales.label.serviceEndedAt": " Dịch vụ đã kết thúc tại ",
+  "sales.label.signedLead": "已簽約",
   "sales.label.star": " Cấp sao ",
   "sales.label.starredLead": "Danh sách",
   "sales.label.status": " Trạng thái ",
   "sales.label.studentName": " Tên sinh viên ",
   "sales.label.tel": "Điện thoại ",
+  "sales.label.totalLead": "全部",
   "sales.orderImportModal.description": " Nhấp vào đây để tải xuống mẫu ",
   "sales.orderImportModal.failed": " Tải lên không thành công ",
   "sales.orderImportModal.note": " Kích thước tệp tối đa 10MB",
