--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -521,6 +521,7 @@
   "common.label.discountDownPrice": "首期折扣",
   "common.label.draft": "草稿",
   "common.label.email": "信箱",
+  "common.label.emailForEnglish": "Email",
   "common.label.endedAt": "结束时间",
   "common.label.example": "范例",
   "common.label.exportFields": "汇出栏位",
@@ -554,6 +555,7 @@
   "common.label.keywords": "keywords",
   "common.label.languages": "显示语系",
   "common.label.lastLogin": "上次登入",
+  "common.label.leadLevel": "分級",
   "common.label.learningDuration": "学习时数",
   "common.label.learningProgress": "学习进度",
   "common.label.listPrice": "定价",
@@ -698,6 +700,7 @@
   "common.menu.learningOverviewAdmin": "学习总览",
   "common.menu.mediaLibrary": "媒体库",
   "common.menu.memberCategory": "会员分类",
+  "common.menu.memberContracts": "合約資料管理",
   "common.menu.memberProperties": "自订栏位",
   "common.menu.memberSettings": "个人设定",
   "common.menu.members": "会员列表",
@@ -868,11 +871,6 @@
   "common.ui.editParticipant": "Edit participant",
   "common.ui.editPassword": "修改密码",
   "common.ui.export": "汇出",
-  "common.ui.exportOrder": "汇出资料",
-  "common.ui.exportOrderDiscount": "折扣明细",
-  "common.ui.exportOrderLog": "汇出总表",
-  "common.ui.exportOrderProduct": "订单明细",
-  "common.ui.exportPaymentLog": "交易明细",
   "common.ui.exportProgramProgress": "汇出学习进度",
   "common.ui.facebookLogin": "Facebook 登入/注册",
   "common.ui.gap": "行距",
@@ -1507,6 +1505,48 @@
   "member.ui.memberReject": "学员拒绝",
   "member.ui.switchCalendar": "切换月历模式",
   "member.ui.switchTable": "切换列表模式",
+  "memberContract.label.agreed": "已簽約",
+  "memberContract.label.agreedAt": "簽署日期",
+  "memberContract.label.appointment": "諮詢",
+  "memberContract.label.appointmentCreator": "指定業師",
+  "memberContract.label.approvedApprovalAt": "核准時間",
+  "memberContract.label.approvedAt": "審核通過日期",
+  "memberContract.label.coins": "代幣",
+  "memberContract.label.contractCreator": "合約建立者",
+  "memberContract.label.executors": "承辦人",
+  "memberContract.label.installmentPlan": "期數",
+  "memberContract.label.loanCancelAt": "取消日期",
+  "memberContract.label.memberContract": "合約資料",
+  "memberContract.label.memberContractId": "合約編號",
+  "memberContract.label.note": "備註",
+  "memberContract.label.payment": "付款",
+  "memberContract.label.paymentMethod": "付款方式",
+  "memberContract.label.paymentNumber": "金流編號",
+  "memberContract.label.price": "訂單金額",
+  "memberContract.label.product": "產品",
+  "memberContract.label.proofOfEnrollment": "學生證明",
+  "memberContract.label.purchasedItemId": "購買項目",
+  "memberContract.label.rebateGift": "滿額學習工具",
+  "memberContract.label.recognizePerformance": "績效金額",
+  "memberContract.label.referralMember": "推薦人",
+  "memberContract.label.refundApply": "提出退費",
+  "memberContract.label.refundApplyAt": "提出退費日期",
+  "memberContract.label.remarks": "備註",
+  "memberContract.label.revenueShare": "業務分潤",
+  "memberContract.label.revoked": "已解約",
+  "memberContract.label.revokedAt": "解約日期",
+  "memberContract.label.servicePeriod": "服務期間",
+  "memberContract.label.serviceStartedAt": "服務開始",
+  "memberContract.label.status": "狀態",
+  "memberContract.label.studentName": "學員姓名",
+  "memberContract.reupload": "重新上傳",
+  "memberContract.status.all": "所有狀態",
+  "memberContract.status.applyRefund": "提出退費",
+  "memberContract.status.approvedApproval": "審核通過",
+  "memberContract.status.contractTermination": "解約",
+  "memberContract.status.pendingApproval": "審核中",
+  "memberContract.ui.downloadProofOfEnrollment": "下載證明",
+  "memberContract.ui.join": "加入",
   "memberMessages.label.createMember": "添加会员",
   "memberMessages.label.presentCall": "本次通话",
   "memberMessages.label.roleSettings": "添加身份",
@@ -1659,6 +1699,7 @@
   "order.label.orderLogStatus": "订单状态",
   "order.label.orderLogUpdatedAt": "订单更新时间",
   "order.label.paidPrice": "支付金额",
+  "order.label.paymentLogDetails": "付款方式",
   "order.label.paymentLogPaidAt": "付款时间",
   "order.label.referrer": "推荐人",
   "order.text.modifyOrderStatusDescription": "此操作仅更改状态显示并控制使用者权限，实际退款或金额异动请到金流平台操作。",
@@ -1835,6 +1876,7 @@
   "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
   "page.salesLeadDeliveryPage.field": "領域",
   "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
+  "page.salesLeadDeliveryPage.leadLevel": "名單分級",
   "page.salesLeadDeliveryPage.marketingActivity": "行銷活動",
   "page.salesLeadDeliveryPage.nextStep": "下一步",
   "page.salesLeadDeliveryPage.originalManager": "原承辦人",
@@ -1846,9 +1888,6 @@
   "pageProgramProgressCollectionAdminPage.exerciseStatus": "测验状态",
   "pages.salesAdminPage.export": "汇出资料",
   "pages.salesAdminPage.import": "汇入资料",
-  "payment.status.invoiceFailed": "开立失败 {errorCode}",
-  "payment.status.invoicePending": "未开立电子发票",
-  "payment.status.invoiceSuccess": "开立成功",
   "permission.label.all": "所有权限",
   "permissionAdmin.label.permissionGroup": "权限组",
   "permissionAdmin.text.deletePermissionGroupConfirmation": "权限组一经删除即不可恢复，并且会将挂有此权限组的会员移除权限，确定要删除吗？",
@@ -2009,6 +2048,8 @@
   "program.label.allowMultipleAnswers": "允许多个正确解答",
   "program.label.answerDescription": "解答说明",
   "program.label.availableForPastContent": "可看过去内容",
+  "program.label.availableToGoBack": "可返回前題",
+  "program.label.availableToRetry": "可重新測驗",
   "program.label.choice": "选项",
   "program.label.chooseCaptionLanguage": "选择字幕语系",
   "program.label.contentPlan": "适用方案",
@@ -2021,8 +2062,10 @@
   "program.label.displayPrivate": "私密成果",
   "program.label.duration": "内容时长（分钟）",
   "program.label.estimatedTime": "估计时间（分钟）",
+  "program.label.exercise": "課後測驗",
   "program.label.exerciseCreatedAt": "测验日期",
   "program.label.exerciseStatistics": "答题状况",
+  "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": "个别表现",
   "program.label.isCorrectAnswer": "此为正确解答",
   "program.label.markIssueAs": "标记为 {status}",
@@ -2066,9 +2109,9 @@
   "program.text.coverRequiredTips": "若作业形式以文件为主，建议不勾选",
   "program.text.deleteChoiceDescription": "选项删除即不可恢复，确定要删除吗？",
   "program.text.deleteContentWarning": "你确定要删除此内容？此动作无法还原",
+  "program.text.deleteExerciseWarning": "將刪除所有與此測驗相關資料且不可復原，確定要刪除嗎？",
   "program.text.deletePracticeWarning": "将删除所有与此作业相关资料且不可复原，确定要删除吗？",
   "program.text.deleteQuestionDescription": "题目删除即不可恢复，确定要删除吗？ ",
-  "program.text.deleteSectionWarning": "此区块内的所有内容将被删除，此动作无法还原",
   "program.text.discountDownNotation": "定价或优惠价 - 首期折扣 = 首期支付金额\nEX：100 - 20 = 80，此栏填入 20",
   "program.text.empty": "没有课程问题",
   "program.text.enrolledPerpetualCount": "已售 {count} 人",
@@ -2100,23 +2143,18 @@
   "program.ui.articleContent": "图文内容",
   "program.ui.checkProgramContent": "查看课程内容",
   "program.ui.chooseFile": "选择档案",
-  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": "新增选项",
   "program.ui.createExerciseQuestion": "新增题目",
   "program.ui.delete": "删除档案",
   "program.ui.deleteChoice": "删除选项",
   "program.ui.deleteContent": "删除内容",
   "program.ui.deleteQuestion": "删除题目",
-  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": "启用",
   "program.ui.delivery": "交付课程",
   "program.ui.difficulty": "难易度",
   "program.ui.editProgram": "编辑课程",
   "program.ui.manageCaption": "管理字幕",
-  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": "预览",
-  "program.ui.programContent": "課程內容",
-  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "重新上传",
   "program.ui.sortContents": "排序内容",
   "program.ui.sortProgram": "课程排序",
@@ -2240,16 +2278,8 @@
   "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "Please enter a reason for rejection",
   "project.ProjectRejectMarkModal.reason": "Reason",
   "project.ProjectRejectMarkModal.rejectMark": "Reject Mark",
-  "project.label.isParticipantsVisible": "购买人数",
-  "project.label.isPublished": "是否开卖",
-  "project.label.planDescription": "方案描述",
-  "project.label.published": "发售，专案上架后立即开卖",
-  "project.label.unPublished": "停售，此方案暂停对外销售，并从专案中隐藏",
-  "project.text.introductionDefaultNotice": "预设显示在手机版与电脑版的图文内容",
-  "project.text.introductionDesktopNotice": "优先显示在电脑版的图文内容，若与「预设」一样可留空",
   "project.text.noSalePlan": "尚未订定募资条件",
   "project.text.noSalePrice": "Sale price has not been set",
-  "project.ui.saveProjectPlan": "储存方案",
   "promotion.*.isRequired": "請輸入{field}",
   "promotion.event.successfullyRevoked": "收回成功",
   "promotion.label.amount": "数量",
@@ -2433,6 +2463,7 @@
   "sale.OrderExportModal.orderDiscountTotalPrice": "折扣總額",
   "sale.OrderExportModal.orderExpired": "已失效",
   "sale.OrderExportModal.orderFailed": "付款失敗",
+  "sale.OrderExportModal.orderLogCategory": "訂單項目",
   "sale.OrderExportModal.orderLogCreatedDate": "建立日期",
   "sale.OrderExportModal.orderLogExecutor": "承辦人與分潤",
   "sale.OrderExportModal.orderLogId": "訂單編號",
@@ -2494,6 +2525,8 @@
   "sale.SaleCollectionAdminCard.removeEquity": "移除权益",
   "sale.SaleCollectionAdminCard.removeEquityWarning": "此操作将移除{productName}的使用权益，确定要移除吗？",
   "sale.SaleCollectionAdminCard.updateEquitySuccessfully": "权益异动成功",
+  "sales.label.assignedAt": "派發日期",
+  "sales.label.assignedLead": "近期派發",
   "sales.label.autoStartCalls": "自动拨号",
   "sales.label.chaileaseApply": "申请资融",
   "sales.label.chaileaseLookup": "报名查询",
@@ -2501,12 +2534,13 @@
   "sales.label.contactedLead": "已联系名单",
   "sales.label.createdAt": "建立日期",
   "sales.label.deals": "已成交",
+  "sales.label.dedicatedLead": "專屬名單",
+  "sales.label.existedLead": "既有名單",
   "sales.label.idledLead": "未联系名单",
   "sales.label.invitedLead": "已邀约名单",
   "sales.label.keepInTouch": "开发中",
   "sales.label.lastContactAt": "最近联系时间",
   "sales.label.lastTask": "最近待办",
-  "sales.label.paidLead": "既有学员",
   "sales.label.paidPrice": "已付金额",
   "sales.label.potentials": "待开发",
   "sales.label.presentedLead": "已示范名单",
@@ -2521,11 +2555,13 @@
   "sales.label.salesPerformance": "业绩总表",
   "sales.label.salesStatus": "即时战况",
   "sales.label.serviceEndedAt": "服务截止时间",
+  "sales.label.signedLead": "已簽約",
   "sales.label.star": "星等",
   "sales.label.starredLead": "收藏名单",
   "sales.label.status": "状态",
   "sales.label.studentName": "学员姓名",
   "sales.label.tel": "电话",
+  "sales.label.totalLead": "全部",
   "sales.orderImportModal.description": "点此下载范本",
   "sales.orderImportModal.failed": "上传失败",
   "sales.orderImportModal.note": "档案上限10MB",
