--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -521,6 +521,7 @@
   "common.label.discountDownPrice": "首期折扣",
   "common.label.draft": "草稿",
   "common.label.email": "信箱",
+  "common.label.emailForEnglish": "Email",
   "common.label.endedAt": "結束時間",
   "common.label.example": "範例",
   "common.label.exportFields": "匯出欄位",
@@ -554,6 +555,7 @@
   "common.label.keywords": "keywords",
   "common.label.languages": "顯示語系",
   "common.label.lastLogin": "上次登入",
+  "common.label.leadLevel": "分級",
   "common.label.learningDuration": "學習時數",
   "common.label.learningProgress": "學習進度",
   "common.label.listPrice": "定價",
@@ -698,6 +700,7 @@
   "common.menu.learningOverviewAdmin": "學習總覽",
   "common.menu.mediaLibrary": "媒體庫",
   "common.menu.memberCategory": "會員分類",
+  "common.menu.memberContracts": "合約資料管理",
   "common.menu.memberProperties": "自訂欄位",
   "common.menu.memberSettings": "個人設定",
   "common.menu.members": "會員列表",
@@ -868,11 +871,6 @@
   "common.ui.editParticipant": "編輯參與者",
   "common.ui.editPassword": "修改密碼",
   "common.ui.export": "匯出",
-  "common.ui.exportOrder": "匯出資料",
-  "common.ui.exportOrderDiscount": "折扣明細",
-  "common.ui.exportOrderLog": "匯出總表",
-  "common.ui.exportOrderProduct": "訂單明細",
-  "common.ui.exportPaymentLog": "交易明細",
   "common.ui.exportProgramProgress": "匯出學習進度",
   "common.ui.facebookLogin": "Facebook 登入/註冊",
   "common.ui.gap": "行距",
@@ -1511,6 +1509,48 @@
   "member.ui.memberReject": "學員拒絕",
   "member.ui.switchCalendar": "切換月曆模式",
   "member.ui.switchTable": "切換列表模式",
+  "memberContract.label.agreed": "已簽約",
+  "memberContract.label.agreedAt": "簽署日期",
+  "memberContract.label.appointment": "諮詢",
+  "memberContract.label.appointmentCreator": "指定業師",
+  "memberContract.label.approvedApprovalAt": "核准時間",
+  "memberContract.label.approvedAt": "審核通過日期",
+  "memberContract.label.coins": "代幣",
+  "memberContract.label.contractCreator": "合約建立者",
+  "memberContract.label.executors": "承辦人",
+  "memberContract.label.installmentPlan": "期數",
+  "memberContract.label.loanCancelAt": "取消日期",
+  "memberContract.label.memberContract": "合約資料",
+  "memberContract.label.memberContractId": "合約編號",
+  "memberContract.label.note": "備註",
+  "memberContract.label.payment": "付款",
+  "memberContract.label.paymentMethod": "付款方式",
+  "memberContract.label.paymentNumber": "金流編號",
+  "memberContract.label.price": "訂單金額",
+  "memberContract.label.product": "產品",
+  "memberContract.label.proofOfEnrollment": "學生證明",
+  "memberContract.label.purchasedItemId": "購買項目",
+  "memberContract.label.rebateGift": "滿額學習工具",
+  "memberContract.label.recognizePerformance": "績效金額",
+  "memberContract.label.referralMember": "推薦人",
+  "memberContract.label.refundApply": "提出退費",
+  "memberContract.label.refundApplyAt": "提出退費日期",
+  "memberContract.label.remarks": "備註",
+  "memberContract.label.revenueShare": "業務分潤",
+  "memberContract.label.revoked": "已解約",
+  "memberContract.label.revokedAt": "解約日期",
+  "memberContract.label.servicePeriod": "服務期間",
+  "memberContract.label.serviceStartedAt": "服務開始",
+  "memberContract.label.status": "狀態",
+  "memberContract.label.studentName": "學員姓名",
+  "memberContract.reupload": "重新上傳",
+  "memberContract.status.all": "所有狀態",
+  "memberContract.status.applyRefund": "提出退費",
+  "memberContract.status.approvedApproval": "審核通過",
+  "memberContract.status.contractTermination": "解約",
+  "memberContract.status.pendingApproval": "審核中",
+  "memberContract.ui.downloadProofOfEnrollment": "下載證明",
+  "memberContract.ui.join": "加入",
   "memberMessages.label.createMember": "添加會員",
   "memberMessages.label.presentCall": "本次通話",
   "memberMessages.label.roleSettings": "添加身份",
@@ -1663,6 +1703,7 @@
   "order.label.orderLogStatus": "訂單狀態",
   "order.label.orderLogUpdatedAt": "訂單更新時間",
   "order.label.paidPrice": "支付金額",
+  "order.label.paymentLogDetails": "付款方式",
   "order.label.paymentLogPaidAt": "付款時間",
   "order.label.referrer": "推薦人",
   "order.text.modifyOrderStatusDescription": "此操作僅更改狀態顯示並控制使用者權限，實際退款或金額異動請到金流平台操作。",
@@ -1839,6 +1880,7 @@
   "page.salesLeadDeliveryPage.expectedDeliveryAmount": "預計派發名單數",
   "page.salesLeadDeliveryPage.field": "領域",
   "page.salesLeadDeliveryPage.filterSalesLead": "篩選名單",
+  "page.salesLeadDeliveryPage.leadLevel": "名單分級",
   "page.salesLeadDeliveryPage.marketingActivity": "行銷活動",
   "page.salesLeadDeliveryPage.nextStep": "下一步",
   "page.salesLeadDeliveryPage.originalManager": "原承辦人",
@@ -1850,9 +1892,6 @@
   "pageProgramProgressCollectionAdminPage.exerciseStatus": "測驗狀態",
   "pages.salesAdminPage.export": "匯出資料",
   "pages.salesAdminPage.import": "匯入資料",
-  "payment.status.invoiceFailed": "開立失敗 {errorCode}",
-  "payment.status.invoicePending": "未開立電子發票",
-  "payment.status.invoiceSuccess": "開立成功",
   "permission.label.all": "所有權限",
   "permissionAdmin.label.permissionGroup": "權限組",
   "permissionAdmin.text.deletePermissionGroupConfirmation": "權限組一經刪除即不可恢復，並且會將掛有此權限組的會員移除權限，確定要刪除嗎？",
@@ -2013,6 +2052,8 @@
   "program.label.allowMultipleAnswers": "允許多個正確解答",
   "program.label.answerDescription": "解答說明",
   "program.label.availableForPastContent": "可看過去內容",
+  "program.label.availableToGoBack": "可返回前題",
+  "program.label.availableToRetry": "可重新測驗",
   "program.label.choice": "選項",
   "program.label.chooseCaptionLanguage": "選擇字幕語系",
   "program.label.contentPlan": "適用方案",
@@ -2025,8 +2066,10 @@
   "program.label.displayPrivate": "私密成果",
   "program.label.duration": "內容時長（分鐘）",
   "program.label.estimatedTime": "估計時間（分鐘）",
+  "program.label.exercise": "課後測驗",
   "program.label.exerciseCreatedAt": "測驗日期",
   "program.label.exerciseStatistics": "答題狀況",
+  "program.label.exerciseTitle": "標題",
   "program.label.individualExercise": "個別表現",
   "program.label.isCorrectAnswer": "此為正確解答",
   "program.label.markIssueAs": "標記為 {status}",
@@ -2070,9 +2113,9 @@
   "program.text.coverRequiredTips": "若作業形式以文件為主，建議不勾選",
   "program.text.deleteChoiceDescription": "選項刪除即不可恢復，確定要刪除嗎？",
   "program.text.deleteContentWarning": "你確定要刪除此內容？此動作無法還原",
+  "program.text.deleteExerciseWarning": "將刪除所有與此測驗相關資料且不可復原，確定要刪除嗎？",
   "program.text.deletePracticeWarning": "將刪除所有與此作業相關資料且不可復原，確定要刪除嗎？",
   "program.text.deleteQuestionDescription": "題目刪除即不可恢復，確定要刪除嗎？",
-  "program.text.deleteSectionWarning": "此區塊內的所有內容將被刪除，此動作無法還原",
   "program.text.discountDownNotation": "定價或優惠價 - 首期折扣 = 首期支付金額\nEX：100 - 20 = 80，此欄填入 20",
   "program.text.empty": "沒有課程問題",
   "program.text.enrolledPerpetualCount": "已售 {count} 人",
@@ -2104,23 +2147,18 @@
   "program.ui.articleContent": "圖文內容",
   "program.ui.checkProgramContent": "查看課程內容",
   "program.ui.chooseFile": "選擇檔案",
-  "program.ui.createContent": "新增內容",
   "program.ui.createExerciseChoice": "新增選項",
   "program.ui.createExerciseQuestion": "新增題目",
   "program.ui.delete": "刪除檔案",
   "program.ui.deleteChoice": "刪除選項",
   "program.ui.deleteContent": "刪除內容",
   "program.ui.deleteQuestion": "刪除題目",
-  "program.ui.deleteSection": "刪除區塊",
   "program.ui.deliver": "啟用",
   "program.ui.delivery": "交付課程",
   "program.ui.difficulty": "難易度",
   "program.ui.editProgram": "編輯課程",
   "program.ui.manageCaption": "管理字幕",
-  "program.ui.practiceContent": "作業練習",
   "program.ui.preview": "預覽",
-  "program.ui.programContent": "課程內容",
-  "program.ui.programExercise": "隨堂測驗",
   "program.ui.reUpload": "重新上傳",
   "program.ui.sortContents": "排序內容",
   "program.ui.sortProgram": "課程排序",
@@ -2244,16 +2282,8 @@
   "project.ProjectRejectMarkModal.pleaseEnterAReasonForRejection": "請輸入拒絕原因",
   "project.ProjectRejectMarkModal.reason": "原因",
   "project.ProjectRejectMarkModal.rejectMark": "拒絕標記",
-  "project.label.isParticipantsVisible": "購買人數",
-  "project.label.isPublished": "是否開賣",
-  "project.label.planDescription": "方案描述",
-  "project.label.published": "發售，專案上架後立即開賣",
-  "project.label.unPublished": "停售，此方案暫停對外銷售，並從專案中隱藏",
-  "project.text.introductionDefaultNotice": "預設顯示在手機版與電腦版的圖文內容",
-  "project.text.introductionDesktopNotice": "優先顯示在電腦版的圖文內容，若與「預設」一樣可留空",
   "project.text.noSalePlan": "Project sale plan has not been set",
   "project.text.noSalePrice": "Sale price has not been set",
-  "project.ui.saveProjectPlan": "儲存方案",
   "promotion.*.isRequired": "請輸入{field}",
   "promotion.event.successfullyRevoked": "收回成功",
   "promotion.label.amount": "數量",
@@ -2437,6 +2467,7 @@
   "sale.OrderExportModal.orderDiscountTotalPrice": "折扣總額",
   "sale.OrderExportModal.orderExpired": "已失效",
   "sale.OrderExportModal.orderFailed": "付款失敗",
+  "sale.OrderExportModal.orderLogCategory": "訂單項目",
   "sale.OrderExportModal.orderLogCreatedDate": "建立日期",
   "sale.OrderExportModal.orderLogExecutor": "承辦人與分潤",
   "sale.OrderExportModal.orderLogId": "訂單編號",
@@ -2498,6 +2529,8 @@
   "sale.SaleCollectionAdminCard.removeEquity": "移除權益",
   "sale.SaleCollectionAdminCard.removeEquityWarning": "此操作將移除 {productName} 的使用權益，確定要移除嗎？",
   "sale.SaleCollectionAdminCard.updateEquitySuccessfully": "權益異動成功",
+  "sales.label.assignedAt": "派發日期",
+  "sales.label.assignedLead": "近期派發",
   "sales.label.autoStartCalls": "自動撥號",
   "sales.label.chaileaseApply": "申請資融",
   "sales.label.chaileaseLookup": "報名查詢",
@@ -2505,12 +2538,13 @@
   "sales.label.contactedLead": "已聯繫名單",
   "sales.label.createdAt": "建立日期",
   "sales.label.deals": "已成交",
+  "sales.label.dedicatedLead": "專屬名單",
+  "sales.label.existedLead": "既有名單",
   "sales.label.idledLead": "未聯繫名單",
   "sales.label.invitedLead": "已邀約名單",
   "sales.label.keepInTouch": "開發中",
   "sales.label.lastContactAt": "最近聯繫時間",
   "sales.label.lastTask": "最近待辦",
-  "sales.label.paidLead": "既有學員",
   "sales.label.paidPrice": "已付金額",
   "sales.label.potentials": "待開發",
   "sales.label.presentedLead": "已示範名單",
@@ -2525,11 +2559,13 @@
   "sales.label.salesPerformance": "業績總表",
   "sales.label.salesStatus": "即時戰況",
   "sales.label.serviceEndedAt": "服務截止時間",
+  "sales.label.signedLead": "已簽約",
   "sales.label.star": "星等",
   "sales.label.starredLead": "收藏名單",
   "sales.label.status": "狀態",
   "sales.label.studentName": "學員姓名",
   "sales.label.tel": "電話",
+  "sales.label.totalLead": "全部",
   "sales.orderImportModal.description": "點此下載範本",
   "sales.orderImportModal.failed": "上傳失敗",
   "sales.orderImportModal.note": "檔案上限 10MB",
