--- a/src/translations/locales/en-us.json
+++ b/src/translations/locales/en-us.json
@@ -2567,5 +2567,6 @@
   "voucher.status.redeemable": "Redeemable",
   "voucher.text.fromNow": "From now on",
   "voucher.text.items": "items",
-  "voucher.text.noUsePeriod": "No UsePeriod"
+  "voucher.text.noUsePeriod": "No UsePeriod",
+  "project.ProjectPublishAdminBlock.portfolioUnpublishingWarningText": "Portfolio will unpublish and not display in list."
 }
