--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -2571,5 +2571,6 @@
   "voucher.status.redeemable": "可兌換",
   "voucher.text.fromNow": "即日起",
   "voucher.text.items": "個項目",
-  "voucher.text.noUsePeriod": "無使用期限"
+  "voucher.text.noUsePeriod": "無使用期限",
+  "project.ProjectPublishAdminBlock.portfolioUnpublishingWarningText": "作品將下架且不會出現在列表。"
 }
