--- a/src/translations/locales/id.json
+++ b/src/translations/locales/id.json
@@ -929,6 +929,7 @@
   "common.ui.uploadCertification": "Unggah Sertifikat",
   "common.ui.uploadFile": "Unggah File",
   "common.ui.uploadImage": "Unggah Gambar",
+  "common.ui.usage": "用量",
   "common.ui.video": "Video",
   "common.unit.day": "Hari",
   "common.unit.hour": "jam",
@@ -1025,6 +1026,7 @@
   "craft.*.lighter": "Tipis",
   "craft.*.lineHeight": "Tinggi Garis",
   "craft.*.normal": "Sedang",
+  "craft.*.orderSelectorEnabled": "啟用排序選擇器",
   "craft.*.paragraphStyle": "Gaya Paragraf",
   "craft.*.positionStyle": "Gaya Posisi",
   "craft.*.primary": "Gaya Satu",
@@ -1269,6 +1271,9 @@
   "form.*.startedAt": "開始日期",
   "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
   "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
+  "form.MemberSelector.memberIsInvited": "會員邀請中",
+  "form.MemberSelector.memberIsUnregistered": "非站上註冊會員",
+  "form.MemberSelector.memberSelect": "請輸入帳號或 Email",
   "form.PermissionGroup.ACTIVITY_ADMIN": "Semua Fitur Aktif",
   "form.PermissionGroup.ACTIVITY_CATEGORY_ADMIN": "Semua kategori aktivitas berfungsi",
   "form.PermissionGroup.ACTIVITY_CATEGORY_DELETE": "Hapus Kategori Aktivitas",
@@ -2197,8 +2202,10 @@
   "project.ProjectIntroForm.introductionDesktopNotice": "優先顯示在電腦版的圖文內容，若與「預設」一樣可留空",
   "project.ProjectIntroForm.notUploaded": "*尚未上傳",
   "project.ProjectIntroForm.showOriginSize": "以原圖尺寸顯示",
+  "project.ProjectParticipantBlock.enterParticipantNamePlease": "請填寫參與者姓名",
   "project.ProjectParticipantBlock.occupationFieldRequired": "Please select a occupation.",
   "project.ProjectParticipantBlock.participantFieldRequired": "Please select a participant.",
+  "project.ProjectParticipantBlock.participantName": "參與者姓名",
   "project.ProjectPlanAdminModal.deliverables": "Hasil Proyek",
   "project.ProjectPlanAdminModal.isParticipantsVisible": "購買人數",
   "project.ProjectPlanAdminModal.isPublished": "是否開賣",
@@ -2233,6 +2240,7 @@
   "project.ProjectPublishAdminBlock.noVideoUrl": "Video url has not been set",
   "project.ProjectPublishAdminBlock.notCompleteNotation": "Please fill required fields. Once completed, you can publish your project.",
   "project.ProjectPublishAdminBlock.notCompletePortfolioNotation": "Please fill required fields. Once completed, you can publish from here.",
+  "project.ProjectPublishAdminBlock.portfolioUnpublishingWarningText": "Portofolio akan dibatalkan publikasinya dan tidak ditampilkan dalam daftar.",
   "project.ProjectPublishAdminBlock.publishedNotation": "Your project is published now, it will show in page.",
   "project.ProjectPublishAdminBlock.publishedPortfolioNotation": "Your portfolio is published now, it will show in page.",
   "project.ProjectPublishAdminBlock.unpublishedNotation": "Your project is not published, it will not show in page.",
@@ -2434,6 +2442,7 @@
   "sale.OrderExportModal.orderDiscountTotalPrice": "折扣總額",
   "sale.OrderExportModal.orderExpired": "已失效",
   "sale.OrderExportModal.orderFailed": "付款失敗",
+  "sale.OrderExportModal.orderLogCategory": "訂單項目",
   "sale.OrderExportModal.orderLogCreatedDate": "建立日期",
   "sale.OrderExportModal.orderLogExecutor": "承辦人與分潤",
   "sale.OrderExportModal.orderLogId": "訂單編號",
@@ -2568,6 +2577,5 @@
   "voucher.status.redeemable": "Dapat ditukarkan",
   "voucher.text.fromNow": "Mulai sekarang",
   "voucher.text.items": "barang",
-  "voucher.text.noUsePeriod": "Tidak Ada Periode Penggunaan ",
-  "project.ProjectPublishAdminBlock.portfolioUnpublishingWarningText": "Portofolio akan dibatalkan publikasinya dan tidak ditampilkan dalam daftar."
+  "voucher.text.noUsePeriod": "Tidak Ada Periode Penggunaan "
 }
