--- a/src/translations/locales/zh-cn.json
+++ b/src/translations/locales/zh-cn.json
@@ -929,6 +929,7 @@
   "common.ui.uploadCertification": "上传证明",
   "common.ui.uploadFile": "上传档案",
   "common.ui.uploadImage": "上传图片",
+  "common.ui.usage": "用量",
   "common.ui.video": "影片",
   "common.unit.day": "天",
   "common.unit.hour": "时",
@@ -1025,6 +1026,7 @@
   "craft.*.lighter": "细",
   "craft.*.lineHeight": "行高",
   "craft.*.normal": "中",
+  "craft.*.orderSelectorEnabled": "啟用排序選擇器",
   "craft.*.paragraphStyle": "段落样式",
   "craft.*.positionStyle": "位置样式",
   "craft.*.primary": "样式一",
@@ -1269,6 +1271,9 @@
   "form.*.startedAt": "開始日期",
   "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
   "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
+  "form.MemberSelector.memberIsInvited": "會員邀請中",
+  "form.MemberSelector.memberIsUnregistered": "非站上註冊會員",
+  "form.MemberSelector.memberSelect": "請輸入帳號或 Email",
   "form.PermissionGroup.ACTIVITY_ADMIN": "所有活动功能",
   "form.PermissionGroup.ACTIVITY_CATEGORY_ADMIN": "所有活动分类功能",
   "form.PermissionGroup.ACTIVITY_CATEGORY_DELETE": "删除活动分类",
@@ -2197,8 +2202,10 @@
   "project.ProjectIntroForm.introductionDesktopNotice": "優先顯示在電腦版的圖文內容，若與「預設」一樣可留空",
   "project.ProjectIntroForm.notUploaded": "*尚未上傳",
   "project.ProjectIntroForm.showOriginSize": "以原圖尺寸顯示",
+  "project.ProjectParticipantBlock.enterParticipantNamePlease": "請填寫參與者姓名",
   "project.ProjectParticipantBlock.occupationFieldRequired": "Please select a occupation.",
   "project.ProjectParticipantBlock.participantFieldRequired": "Please select a participant.",
+  "project.ProjectParticipantBlock.participantName": "參與者姓名",
   "project.ProjectPlanAdminModal.deliverables": "交付项目",
   "project.ProjectPlanAdminModal.isParticipantsVisible": "購買人數",
   "project.ProjectPlanAdminModal.isPublished": "是否開賣",
@@ -2233,6 +2240,7 @@
   "project.ProjectPublishAdminBlock.noVideoUrl": "Video url has not been set",
   "project.ProjectPublishAdminBlock.notCompleteNotation": "Please fill required fields. Once completed, you can publish your project.",
   "project.ProjectPublishAdminBlock.notCompletePortfolioNotation": "Please fill required fields. Once completed, you can publish from here.",
+  "project.ProjectPublishAdminBlock.portfolioUnpublishingWarningText": "作品将下架且不会出现在列表。",
   "project.ProjectPublishAdminBlock.publishedNotation": "Your project is published now, it will show in page.",
   "project.ProjectPublishAdminBlock.publishedPortfolioNotation": "Your portfolio is published now, it will show in page.",
   "project.ProjectPublishAdminBlock.unpublishedNotation": "Your project is not published, it will not show in page.",
@@ -2434,6 +2442,7 @@
   "sale.OrderExportModal.orderDiscountTotalPrice": "折扣總額",
   "sale.OrderExportModal.orderExpired": "已失效",
   "sale.OrderExportModal.orderFailed": "付款失敗",
+  "sale.OrderExportModal.orderLogCategory": "訂單項目",
   "sale.OrderExportModal.orderLogCreatedDate": "建立日期",
   "sale.OrderExportModal.orderLogExecutor": "承辦人與分潤",
   "sale.OrderExportModal.orderLogId": "訂單編號",
@@ -2568,6 +2577,5 @@
   "voucher.status.redeemable": "可兑换",
   "voucher.text.fromNow": "即日起",
   "voucher.text.items": "个项目",
-  "voucher.text.noUsePeriod": "无使用期限",
-  "project.ProjectPublishAdminBlock.portfolioUnpublishingWarningText": "作品将下架且不会出现在列表。"
+  "voucher.text.noUsePeriod": "无使用期限"
 }
