--- a/src/translations/locales/zh-tw.json
+++ b/src/translations/locales/zh-tw.json
@@ -929,6 +929,7 @@
   "common.ui.uploadCertification": "上傳證明",
   "common.ui.uploadFile": "上傳檔案",
   "common.ui.uploadImage": "上傳圖片",
+  "common.ui.usage": "用量",
   "common.ui.video": "影片",
   "common.unit.day": "天",
   "common.unit.hour": "時",
@@ -1025,6 +1026,7 @@
   "craft.*.lighter": "細",
   "craft.*.lineHeight": "行高",
   "craft.*.normal": "中",
+  "craft.*.orderSelectorEnabled": "啟用排序選擇器",
   "craft.*.paragraphStyle": "段落樣式",
   "craft.*.positionStyle": "位置樣式",
   "craft.*.primary": "樣式一",
@@ -1201,7 +1203,7 @@
   "craft.label.recentWatched": "依最近觀看",
   "craft.label.referrerEvaluation": "推薦評價",
   "craft.label.role": "依角色",
-  "craft.label.ruleOfSort": "排序規則",
+  "craft.label.ruleOfSort": "預設排序",
   "craft.label.settings": "基本設定",
   "craft.label.sort": "排序方式",
   "craft.label.sortAsc": "正序",
@@ -1273,6 +1275,9 @@
   "form.GiftPlanInput.pleaseSelectAGiftPlan": "請選擇一個贈品方案",
   "form.GiftPlanInput.selectGiftPlan": "選擇贈品方案",
   "form.GiftPlanInput.whetherProvideGift": "是否有提供贈品",
+  "form.MemberSelector.memberIsInvited": "會員邀請中",
+  "form.MemberSelector.memberIsUnregistered": "非站上註冊會員",
+  "form.MemberSelector.memberSelect": "請輸入帳號或 Email",
   "form.PermissionGroup.ACTIVITY_ADMIN": "所有活動功能",
   "form.PermissionGroup.ACTIVITY_CATEGORY_ADMIN": "所有活動分類功能",
   "form.PermissionGroup.ACTIVITY_CATEGORY_DELETE": "刪除活動分類",
@@ -1981,7 +1986,7 @@
   "program.ProgramCollectionSelector.newest": "自訂項目",
   "program.ProgramCollectionSelector.publishedAt": "依上架日期",
   "program.ProgramCollectionSelector.recentWatched": "依最後觀看時間",
-  "program.ProgramCollectionSelector.ruleOfSort": "排序規則",
+  "program.ProgramCollectionSelector.ruleOfSort": "預設排序",
   "program.ProgramCollectionSelector.sort": "排序方式",
   "program.ProgramCollectionSelector.sortAsc": "正序",
   "program.ProgramCollectionSelector.sortDesc": "倒序",
@@ -2201,8 +2206,10 @@
   "project.ProjectIntroForm.introductionDesktopNotice": "優先顯示在電腦版的圖文內容，若與「預設」一樣可留空",
   "project.ProjectIntroForm.notUploaded": "*尚未上傳",
   "project.ProjectIntroForm.showOriginSize": "以原圖尺寸顯示",
+  "project.ProjectParticipantBlock.enterParticipantNamePlease": "請填寫參與者姓名",
   "project.ProjectParticipantBlock.occupationFieldRequired": "請選擇職位",
   "project.ProjectParticipantBlock.participantFieldRequired": "請選擇參與者",
+  "project.ProjectParticipantBlock.participantName": "參與者姓名",
   "project.ProjectPlanAdminModal.deliverables": "交付項目",
   "project.ProjectPlanAdminModal.isParticipantsVisible": "購買人數",
   "project.ProjectPlanAdminModal.isPublished": "是否開賣",
@@ -2237,6 +2244,7 @@
   "project.ProjectPublishAdminBlock.noVideoUrl": "影片作品網址",
   "project.ProjectPublishAdminBlock.notCompleteNotation": "請填寫以下必填資料，填寫完畢即可發佈你的專案。",
   "project.ProjectPublishAdminBlock.notCompletePortfolioNotation": "請填寫以下必填資料，填寫完畢即可由此發佈",
+  "project.ProjectPublishAdminBlock.portfolioUnpublishingWarningText": "作品將下架且不會出現在列表。",
   "project.ProjectPublishAdminBlock.publishedNotation": "現在你的專案已發佈，此專案會出現在頁面上。",
   "project.ProjectPublishAdminBlock.publishedPortfolioNotation": "現在你的作品已發佈，此作品會出現在頁面上。",
   "project.ProjectPublishAdminBlock.unpublishedNotation": "你的專案未發佈，此專案並不會顯示在頁面上。",
@@ -2438,6 +2446,7 @@
   "sale.OrderExportModal.orderDiscountTotalPrice": "折扣總額",
   "sale.OrderExportModal.orderExpired": "已失效",
   "sale.OrderExportModal.orderFailed": "付款失敗",
+  "sale.OrderExportModal.orderLogCategory": "訂單項目",
   "sale.OrderExportModal.orderLogCreatedDate": "建立日期",
   "sale.OrderExportModal.orderLogExecutor": "承辦人與分潤",
   "sale.OrderExportModal.orderLogId": "訂單編號",
@@ -2572,6 +2581,5 @@
   "voucher.status.redeemable": "可兌換",
   "voucher.text.fromNow": "即日起",
   "voucher.text.items": "個項目",
-  "voucher.text.noUsePeriod": "無使用期限",
-  "project.ProjectPublishAdminBlock.portfolioUnpublishingWarningText": "作品將下架且不會出現在列表。"
+  "voucher.text.noUsePeriod": "無使用期限"
 }
